--- a/languages/ca.ini
+++ b/languages/ca.ini
@@ -24,7 +24,7 @@ account_checkouts_overdue = "Préstecs vençuts"
 account_has_alerts = "Teniu avisos pendents"
 account_normal_checkouts = "Exemplars retirats"
 account_requests_available = "Disponible per recollir"
-account_requests_in_transit = 'En "trànsit cap a la biblioteca de recollida'
+account_requests_in_transit = "En trànsit cap a la biblioteca de recollida"
 account_requests_other = "Altre estat"
 Add a Library Card = "Afegir un nou carnet"
 Add a Library Card using login = "Afegir carnet amb inici de sessió"
@@ -277,7 +277,7 @@ confirm_hold_cancel_all_text = "Desitgeu cancel·lar totes les reserves actuals?
 confirm_hold_cancel_selected_text = "Desitgeu cancel·lar les reserves seleccionades?"
 confirm_ill_request_cancel_all_text = "Vols cancelar totes les peticions de prèstec interibliotecari?"
 confirm_ill_request_cancel_selected_text = "Vols cancelar la selecció de petitions de prèstec interbibliotecari?"
-confirm_new_password = 'Confirma "la nova contrasenya'
+confirm_new_password = "Confirma la nova contrasenya"
 confirm_renew_all_text = "Vols renovar tots els teus préstecs?"
 confirm_renew_selected_text = "Cols renovar els préstecs seleccionats?"
 confirm_storage_retrieval_request_cancel_all_text = "Vols cancelar les teves peticions?"
@@ -594,7 +594,7 @@ hold_error_update_failed = "La reserva no es pot actualitzar."
 hold_expires = "Caduca"
 hold_frozen = "Suspés (temporalment)"
 hold_frozen_through = "Suspés (temporalment) through %%date%%"
-hold_frozen_through_date_invalid = 'Si us plau afegeix una data vàlida per data  "suspensió temporal" "'
+hold_frozen_through_date_invalid = 'Si us plau afegeix una data vàlida per data "suspensió temporal"'
 hold_in_process = "En procés"
 hold_invalid_pickup = "Heu introduït una localització de recollida no vàlida. Torneu-ho a intentar"
 hold_invalid_request_group = 'La petició de reserva no es vàlida. S"i us plau torni a provar-ho'
@@ -1124,7 +1124,7 @@ renew_selected = "Renovar ítems seleccionats"
 renew_success = "Renovació correcte"
 Renewed = "Renovat"
 Request full text = "Demanar el text complet"
-request_in_transit = 'En "trànsit cap a la biblioteca de recollida'
+request_in_transit = "En trànsit cap a la biblioteca de recollida"
 request_place_text = "Fer una sol·licitut"
 request_submit_text = "Executar petició"
 Requests = "Peticions"
@@ -1372,7 +1372,7 @@ username_only_letters_numbers_and_basic_punctuation = "Lletres, números i puntu
 username_only_numeric = "Només números"
 verification_done = "La teva adreça de correu electrònic s'ha verificat correctament."
 verification_email_change_sent = "S'han enviat instruccions de verificació de l'adreça de correu electrònic a la nova adreça de correu electrònic. Heu de verificar l'adreça abans que el canvi tingui efecte."
-verification_email_notification = '"S'ha fet una sol·licitud per verificar la vostra adreça de correu electrònic del vostre compte amb %%library%%.'
+verification_email_notification = "S'ha fet una sol·licitud per verificar la vostra adreça de correu electrònic del vostre compte amb %%library%%."
 verification_email_sent = "Les instruccions de verificació de l'adreça de correu electrònic s'han enviat a l'adreça de correu electrònic registrada amb aquest compte."
 verification_email_subject = "Verificació de correu electrònic VuFind"
 verification_email_url_pretext = "Podeu verificar la vostra adreça de correu electrònic en aquest URL: <%%url%%>"
