--- a/languages/zh-cn.ini
+++ b/languages/zh-cn.ini
@@ -513,7 +513,7 @@ Logout = "退出"
 Main Author = "主要作者"
 Manuscript = "手稿"
 Map = "地图"
-Map View = '地图视图'
+Map View = "地图视图"
 map_results_label = "地址:"
 Maps = "地图"
 Media Format = "媒体格式"
