--- a/languages/zh.ini
+++ b/languages/zh.ini
@@ -379,7 +379,7 @@ Logout = "退出"
 Main Author = "主要作者"
 Manuscript = "手稿"
 Map = "地圖"
-Map View = '地圖視圖'
+Map View = "地圖視圖"
 map_results_label = "地址:"
 Maps = "地圖"
 Media Format = "媒體格式"
