--- a/languages/da.ini
+++ b/languages/da.ini
@@ -66,7 +66,7 @@ authentication_error_admin = "Vi kan ikke logge dig ind lige nu. Kontakt venligs
 authentication_error_blank = "Login information skal udfyldesø"
 authentication_error_denied = "Brugernavn og password stemmer ikke. Adgang nægtet”"
 authentication_error_invalid = "Ugyldig login - prøv venligst igen”"
-authentication_error_technical = 'Vi kan ikke logge dig ind lige nu. Prøv venligst senere".'
+authentication_error_technical = "Vi kan ikke logge dig ind lige nu. Prøv venligst senere."
 Author = "Forfatter"
 Author Browse = "Gennemse Forfattere"
 Author Notes = "Forfatter Kommentarer"
@@ -121,7 +121,8 @@ bulk_email_title = "Library Catalog Items"
 bulk_error_missing = "Der skete en fejl. Din forespørgsel lykkedes ikke”"
 bulk_export_not_supported = "De valgte poster tillader ikke mængde-eksport."
 bulk_fail = "Der skete en fejl. Prøv venligst igen."
-bulk_noitems_advice = 'Ingen emner valgt. Markér venligst emnet og forsøg igen” bulk_save_error = "Der skete en fejl. Dine emner blev ikke gemt.'
+bulk_noitems_advice = "Ingen emner valgt. Markér venligst emnet og forsøg igen"
+bulk_save_error = "Der skete en fejl. Dine emner blev ikke gemt."
 bulk_save_success = "Dine emner blev gemt"
 By = "Efter"
 by = "af"
