--- a/languages/es.ini
+++ b/languages/es.ini
@@ -569,7 +569,7 @@ hold_cancel_success = "Su solicitud ha sido cancelada"
 hold_cancel_success_items = "%%count%% Su solicitud fue cancelada"
 hold_date_invalid = "Introduzca una fecha válida"
 hold_date_past = "Introduzca una fecha futura"
-hold_edit_conflicting_pickup_locations = 'Las reservas seleccionadas tienen diferentes opciones para la ubicación de recogida. Edite una única reserva para cambiar su ubicación de recogida".'
+hold_edit_conflicting_pickup_locations = "Las reservas seleccionadas tienen diferentes opciones para la ubicación de recogida. Edite una única reserva para cambiar su ubicación de recogida."
 hold_edit_failed_items = "La actualización falló para %%count%% reserva (s)"
 hold_edit_frozen = "Estado congelado"
 hold_edit_frozen_set = "Congelar (suspender temporalmente)"
@@ -588,7 +588,7 @@ hold_error_not_holdable = "Este material no puede ser solicitado."
 hold_error_on_shelf_blocked = "Los estantes no están disponibles."
 hold_error_too_many_holds = "No se puede colocar una reserva porque se ha alcanzado el número máximo de reservaciones."
 hold_error_update_blocked_status = "La reserva está en un estado que impide algunos o todos los cambios."
-hold_error_update_failed = 'No se pudo actualizar la reserva".'
+hold_error_update_failed = "No se pudo actualizar la reserva."
 hold_expires = "Expira"
 hold_frozen = "Congelada (suspendida temporalmente)"
 hold_frozen_through = "Congelada (suspendida temporalmente) hasta %%date%%"
@@ -654,7 +654,7 @@ ill_request_processed = "Procesado"
 ill_request_profile_html = 'Para información de solicitud de préstamo interbibliotecario, por favor establecer su <a href="%%url%%">Perfil del Catálogo de la biblioteca</a>'
 ill_request_submit_text = "Lugar de Solicitud"
 Illustrated = "Ilustrado"
-ils_account_create_error = 'No se pudo crear su cuenta en nuestro sistema de administración de bibliotecas. Si el problema persiste, comuníquese con su biblioteca".'
+ils_account_create_error = "No se pudo crear su cuenta en nuestro sistema de administración de bibliotecas. Si el problema persiste, comuníquese con su biblioteca."
 ils_action_unavailable = "La función solicitada no está disponible con la tarjeta de biblioteca activa."
 ils_connection_failed = "Nuestro Sistema de Biblioteca se encuentra en mantenimiento."
 ils_offline_holdings_message = "En este momento no hay información de existencias y disponibilidad de copias. Por favor acepte nuestras disculpas por los inconvenientes causados, contáctenos para una mayor información."
@@ -984,11 +984,11 @@ past_days = "Pasado %%range%% Días"
 patron_account_expires = "Expira"
 patron_status_address_missing = "Tu dirección falta."
 patron_status_card_blocked = "Esta tarjeta de la biblioteca está bloqueada para préstamos."
-patron_status_card_expired = 'Su tarjeta de la biblioteca ha caducado".'
-patron_status_debarred_overdue = 'Tiene ítems no devueltos vencidos".'
-patron_status_debt_limit_reached = 'Tiene %%blockCount%% en multas y tarifas. El límite del bloque de préstamos es %%blockLimit%%".'
-patron_status_guarantees_debt_limit_reached = 'Tienen %%blockCount%% en multas y tarifas. El límite del bloque de préstamos es %%blockLimit%%".'
-patron_status_maximum_requests = 'Ha alcanzado el número máximo (%%blockCount%%) de solicitudes activas".'
+patron_status_card_expired = "Su tarjeta de la biblioteca ha caducado."
+patron_status_debarred_overdue = "Tiene ítems no devueltos vencidos."
+patron_status_debt_limit_reached = "Tiene %%blockCount%% en multas y tarifas. El límite del bloque de préstamos es %%blockLimit%%."
+patron_status_guarantees_debt_limit_reached = "Tienen %%blockCount%% en multas y tarifas. El límite del bloque de préstamos es %%blockLimit%%."
+patron_status_maximum_requests = "Ha alcanzado el número máximo (%%blockCount%%) de solicitudes activas."
 PDF Full Text = "Texto Completo PDF"
 peer_reviewed = "Revisado por Pares"
 peer_reviewed_limit = "Limitar a articulos de revistas revisadas"
