--- a/languages/gl.ini
+++ b/languages/gl.ini
@@ -433,8 +433,8 @@ hold_invalid_request_group = "Grupo de solicitude de reserva inválido. Por favo
 hold_login = "Para información de reservas e retiradas"
 hold_place = "Facer solicitude"
 hold_place_fail_missing = "A súa solicitude  fallou, contactar ao persoal do mostrador de circulación"
-hold_place_success_html = 'Realizouse a súa solicitude. <a *href="%%url%%">Os súas reservas e reclamos</a>.'
-hold_profile_html = 'Para información de reservas e apartados, por favor establecer o seu <a *href="%%url%%">Perfil do Catálogo de Biblioteca</a>.'
+hold_place_success_html = 'Realizouse a súa solicitude. <a href="%%url%%">Os súas reservas e reclamos</a>.'
+hold_profile_html = 'Para información de reservas e apartados, por favor establecer o seu <a href="%%url%%">Perfil do Catálogo de Biblioteca</a>.'
 hold_queue_position = "En cola"
 hold_request_group = "Solicitude do"
 hold_requested_group = "Solicitado a "
@@ -474,7 +474,7 @@ ill_request_place_fail_missing = "A súa solicitude fallou, contactar co persoal
 ill_request_place_success = "Realizouse a súa solicitude"
 ill_request_place_text = "Solicitar Préstamo Interbibliotecario"
 ill_request_processed = "Procesado"
-ill_request_profile_html = 'Para información de solicitude de préstamo *interbibliotecario, por favor establecer o seu <a *href="%%url%%">Perfil do Catálogo da biblioteca</a>'
+ill_request_profile_html = 'Para información de solicitude de préstamo *interbibliotecario, por favor establecer o seu <a href="%%url%%">Perfil do Catálogo da biblioteca</a>'
 ill_request_submit_text = "Lugar de Solicitude"
 Illustrated = "Ilustrado"
 ils_offline_holdings_message = "Neste momento non hai información de existencias e dispoñibilidade de copias. Por favor acepte as nosas desculpas polos inconvenientes causados, contacte connosco para unha maior información"
