--- a/languages/hi.ini
+++ b/languages/hi.ini
@@ -475,7 +475,7 @@ feedback_help_label = "सहायता चाहिए ?"
 feedback_name = "नाम"
 feedback_response = "आपकी प्रतिक्रिया के लिए आपका धन्यवाद"
 feedback_status_answered = "जवाब दिया गया"
-feedback_status_closed = 'बंद";'
+feedback_status_closed = "बंद"
 feedback_status_in progress = "प्रगति पर"
 feedback_status_open = "खुला"
 feedback_status_pending = "लंबित"
