--- a/languages/it.ini
+++ b/languages/it.ini
@@ -591,7 +591,7 @@ hold_error_update_failed = "Il prestito non può aggiornato."
 hold_expires = "Termina"
 hold_frozen = "Congelato (temporaneamente sospeso)"
 hold_frozen_through = "Congelato (temporaneamente sospeso) mediante %%date%%"
-hold_frozen_through_date_invalid = 'Inserire una data valida "congelato attraverso'
+hold_frozen_through_date_invalid = 'Inserire una data valida "congelato attraverso"'
 hold_in_process = "In elaborazione"
 hold_invalid_pickup = "Hai inserito un luogo di ritito non valido; per favore correggi."
 hold_invalid_request_group = "Gruppo di richiesta prenotazioni non ammesso. Prova di nuovo."
