--- a/languages/nl.ini
+++ b/languages/nl.ini
@@ -201,7 +201,7 @@ change_email_verification_reminder = "Als je dit formulier verzendt, wordt een e
 change_notification_email_message = "Er is zojuist een verzoek gedaan om je e-mailadres te wijzigen in %%library%%. Als je deze aanvraag niet gedaan hebt, log dan in op %%url%% en bevestig de integriteit van je profiel. Contacteer support via %%email%% als je vragen of opmerkingen hebt."
 change_notification_email_subject = "Melding van wijziging van de e-mail van uw profiel"
 channel_add_more = "Voeg meer kanalen zoals deze toe"
-channel_browse = 'Meer records" [If this just appears under the records shown, I would expect just to see "Meer'
+channel_browse = "Meer records"
 channel_expand = "Ontdek vergelijkbare kanalen"
 channel_explore = "Ontdek de kanalen"
 channel_search = "Toon items als zoekresultaten"
@@ -303,7 +303,7 @@ delete_account_confirm = "Weet je zeker dat je je account wil verwijderen?"
 delete_account_description_html = "Bewaarde zoekopdrachten en favorieten zullen worden verwijderd. Je kunt wel nog een nieuw account aanmaken als je dat wil."
 delete_account_failure = "Verwijdering van het account is mislukt."
 delete_account_success_message = "Je account is verwijderd. Je wordt afgemeld..."
-delete_account_title = 'Verwijder dit account".'
+delete_account_title = "Verwijder dit account."
 delete_all = "Alles Verwijderen"
 delete_comment_failure = "Opmerking kon niet worden verwijderd"
 delete_comment_success = "Opmerking verwijderd"
@@ -341,7 +341,7 @@ edit_list_success = "Lijst succesvol bijgewerkt"
 Edition = "Editie"
 EDS Results = "Resultaten opgeleverd via EDS"
 eds_expander_fulltext = "Zoek ook in full text van de artikelen"
-eds_expander_relatedsubjects = 'Pas gelijkwaardige onderwerpen toe" or simply "Gelijkwaardige onderwerpen'
+eds_expander_relatedsubjects = "Pas gelijkwaardige onderwerpen toe"
 eds_expander_thesaurus = "Gebruik gerelateerde woorden"
 eds_limiter_FC = "Alleen Catalogus"
 eds_limiter_FC1 = "Alleen Institutionele Repository"
@@ -778,7 +778,7 @@ no_description = "Geen beschrijving beschikbaar."
 no_email_address = "E-mailadres ontbreekt"
 no_items_selected = "er werden geen items geselecteerd"
 nohit_active_filters = "Eén of meerdere filters zijn toegepast op deze zoekopdracht. Als u filters verwijdert, kunt u mogelijk meer resultaten zien."
-nohit_change_tab = 'U heeft gezocht in het tabblad '%%activeTab%% ". U kunt mogelijk iets vinden in één van de andere tabbladen:'
+nohit_change_tab = 'U heeft gezocht in het tabblad "%%activeTab%%". U kunt mogelijk iets vinden in één van de andere tabbladen:'
 nohit_filters = "Filters die actief zijn voor deze zoekopdracht:"
 nohit_heading = "Geen zoekresultaten!"
 nohit_lookfor_html = "Uw zoekopdracht - <strong>%%lookfor%%</strong> - leverde geen resultaten op."
