--- a/languages/pt.ini
+++ b/languages/pt.ini
@@ -23,7 +23,7 @@ add_other_libraries = "Inclua artigos em outras bibliotecas"
 add_search = "Adicionar campo de pesquisa"
 add_search_group = "Adicionar Grupo de Pesquisa"
 add_tag_error = "Erro: Não foi possível guardar as Tags"
-add_tag_note = 'Tags separadas por espaço. Use aspas para tags com várias palavras".'
+add_tag_note = "Tags separadas por espaço. Use aspas para tags com várias palavras."
 add_tag_success = "Tags guardadas"
 add_to_favorites_html = "Adicionar <em>%%title%%</em> aos favoritos"
 Address = "Endereço"
@@ -324,7 +324,7 @@ export_to = "Exportar para %%target%%"
 export_unsupported_format = "Formato de exportação não suportado"
 FAQs = "FAQs"
 fav_delete = "Apagar os Favoritos seleccionados"
-fav_delete_deleting = 'Os Favoritos seleccionados estão a ser apagados".'
+fav_delete_deleting = "Os Favoritos seleccionados estão a ser apagados."
 fav_delete_fail = "Desculpe, ocorreu um erro. Os seu(s) favorito(s) não foram apagados."
 fav_delete_missing = "Alguns dados foram perdidos. Os seu(s) favorito(s) não foram apagados."
 fav_delete_success = "Favorito)s) apagado(s)."
@@ -600,7 +600,7 @@ No Cover Image = "Imagem de Sem Capa"
 No dependency problems found = "Não há problemas de dependência"
 No excerpts were found for this record. = "Não foram encontrados excertos para este registo."
 No library account = "Sem conta na Biblioteca"
-No new item information is currently available. = 'Informação de novos registos não disponível de momento".'
+No new item information is currently available. = "Informação de novos registos não disponível de momento."
 No Preference = "Sem preferência"
 No reviews were found for this record = "Este registo não tem comentários inseridos"
 No Tags = "Sem tags"
