--- a/languages/pt.ini
+++ b/languages/pt.ini
@@ -905,7 +905,7 @@ switch_view = "Alterar a visualização para %%view%%"
 switchquery_intro = "Pode obter mais resultados ajustando a pesquisa."
 switchquery_lowercasebools = "Se usar operadores Booleanos, por favor insira-os com letras MAIÚSCULAS"
 switchquery_truncatechar = "Use a truncatura para aumentar os seus resultados"
-switchquery_unwantedbools = '"As palabras AND, OR e NOT podem gerar pesquisas incorrectas; tente utilizar aspas"'
+switchquery_unwantedbools = "As palabras AND, OR e NOT podem gerar pesquisas incorrectas; tente utilizar aspas"
 switchquery_unwantedquotes = "Se retirar as aspas poderá fazer uma pesquisa mais abragente"
 switchquery_wildcard = "Se adicionar um carácter universal pode recuperar variações da palavra pesquisada"
 System Unavailable = "Sistema indisponível"
