--- a/languages/sl.ini
+++ b/languages/sl.ini
@@ -498,7 +498,7 @@ more_options_ellipsis = "Več možnosti..."
 Most Recent Received Issues = "Nazadnje pridobljeni izvodi"
 Multiple Call Numbers = "Več signatur"
 Multiple Locations = "Več lokacij"
-Musical Score = 'Glasb"'
+Musical Score = "Glasb"
 My Favorites = "Moje priljubljene"
 My Fines = "Moje zamudnine"
 My Holds = "Moje izposojene"
