--- a/languages/en.ini
+++ b/languages/en.ini
@@ -142,7 +142,8 @@ Bookmark = "Bookmark"
 bookplate_label = "%%title%% bookplate"
 Books = "Books"
 Borrowing Location = "Borrowing Location"
-bound_with_heading = "Contents"
+bound_with_heading_one_callnumber = "Contents"
+bound_with_heading_multiple_callnumbers = "Contents of %%callnumber%%"
 bound_with_intro = "The following works are all found in the book indicated by the call number above and are in the order of the titles listed below."
 bound_with_item = "(Bound With)"
 Braille = "Braille"
