Add escaping of quotes inside quotes of the same type.

--- a/languages/CookieConsent/it.ini
+++ b/languages/CookieConsent/it.ini
@@ -2,7 +2,7 @@ Accept All Cookies = "accetta tutti i cookies"
 Accept Only Essential Cookies = "accetta solo i cookies essenziali"
 analytics_cookies_description_html = "I dati raccolti con questi cookies vengono utilizzati per lo sviluppo del sito."
 analytics_cookies_title_html = "cookies analitici"
-category_description_html = 'I cookies utilizzati sul sito sono classificati in base al loro scopo. Di seguito è riportata la descrizione di ciascuna categoria e l'opzione per accettarla o rifiutarla. <a href="%%siteRootAttr%%/Content/privacy" target="_blank">Informazioni sulla privacy del sito</a>.'
+category_description_html = 'I cookies utilizzati sul sito sono classificati in base al loro scopo. Di seguito è riportata la descrizione di ciascuna categoria e l\'opzione per accettarla o rifiutarla. <a href="%%siteRootAttr%%/Content/privacy" target="_blank">Informazioni sulla privacy del sito</a>.'
 cookie_description_cart_html = "Serve a riporre il contenuto della borsa dei libri."
 cookie_description_consent_html = "Serve a memorizzare le informazioni relative al consenso o al rifiuto dei visitatori all'uso delle categorie di cookie utilizzate sul sito."
 cookie_description_language_html = "Serve a memorizzare la lingua dell'interfaccia utente corrente."
