--- a/languages/ar.ini
+++ b/languages/ar.ini
@@ -1098,7 +1098,7 @@ Refine Results = "تنقيح النتائج"
 Region = "المنطقة"
 relais_available = "هذه المادة متاحة عبر الإعارة بين المكتبات. هل ترغب في طلبها؟ "
 relais_checking = "جاري التحقق من الإتاحة..."
-relais_error_html = 'لقد حدثت مشكلة بخصوص هذا الطلب. انقر <a href="%%url%%" target='new'>هنا</a> لطلب هذه المادة باستخدام الموقع الالكتروني للإعارة بين المكتبات.'
+relais_error_html = 'لقد حدثت مشكلة بخصوص هذا الطلب. انقر <a href="%%url%%" target="new">هنا</a> لطلب هذه المادة باستخدام الموقع الالكتروني للإعارة بين المكتبات.'
 relais_request = "طلب إعارة بين المكتبات"
 relais_requesting = "جاري الطلب..."
 relais_search = "بحث الإعارة بين المكتبات"
