--- a/languages/ca.ini
+++ b/languages/ca.ini
@@ -97,7 +97,7 @@ authentication_error_admin = "No podem iniciar la vostra sessió en aquests mome
 authentication_error_blank = "La informació de registre no pot estar en blanc."
 authentication_error_creation_blocked = "No estàs autoritzat per crear un usuari."
 authentication_error_denied = "Les credencials no coincideixen! Accés denegat."
-authentication_error_email_not_verified_html = 'La vostra adreça de correu electrònic encara no s'ha verificat. Comproveu el filtre de correu brossa per obtenir el missatge de verificació. Si és necessari, podem <a href="%%url%%">tornar a enviar el correu electrònic de verificació</a>.'
+authentication_error_email_not_verified_html = 'La vostra adreça de correu electrònic encara no s\'ha verificat. Comproveu el filtre de correu brossa per obtenir el missatge de verificació. Si és necessari, podem <a href="%%url%%">tornar a enviar el correu electrònic de verificació</a>.'
 authentication_error_expired = "Sol·licitud d'autentificació ha caducar."
 authentication_error_in_progress = "La petició d' inici de sessió ja està en procés. Si us plau proveu més tard"
 authentication_error_invalid = "Inici de sessió no vàlid -- torneu-ho a intentar."
@@ -385,10 +385,10 @@ Email address is invalid = "L’adreça de correu electrònic no és vàlida"
 Email Record = "Registre de correu electrònic"
 Email this = "Enviar per correu electrònic aquest"
 Email this Search = "Enviar per correu electrònic aquesta cerca"
-email_change_pending_html = 'Teniu un canvi de correu electrònic pendent a %%pending%%. Feu clic a l'enllaç del correu electrònic de verificació enviat a aquesta adreça per completar el canvi. Si és necessari, podem <a href="%%url%%"> Reenvia el correu electrònic de verificació </a>.'
+email_change_pending_html = 'Teniu un canvi de correu electrònic pendent a %%pending%%. Feu clic a l\'enllaç del correu electrònic de verificació enviat a aquesta adreça per completar el canvi. Si és necessari, podem <a href="%%url%%"> Reenvia el correu electrònic de verificació </a>.'
 email_failure = "Error - El missatge no es pot enviar"
 email_link = "Enllaç"
-email_login_desc = 'Si us plau, utilitzeu el següent enllaç per iniciar la sessió. Si no heu iniciat l'inici de sessió, pot ignorar aquest missatge amb seguretat. Tingueu en compte que l'enllaç només és vàlid per a un temps limitat i només amb el dispositiu que heu utilitzat per introduir l'adreça de correu electrònic.".'
+email_login_desc = 'Si us plau, utilitzeu el següent enllaç per iniciar la sessió. Si no heu iniciat l\'inici de sessió, pot ignorar aquest missatge amb seguretat. Tingueu en compte que l\'enllaç només és vàlid per a un temps limitat i només amb el dispositiu que heu utilitzat per introduir l\'adreça de correu electrònic.".'
 email_login_link = "Enllaç per iniciar la sessió: <%%url%%>"
 email_login_link_sent = "Hem enviat un enllaç d'inici de sessió a la vostra adreça de correu electrònic. Pot arribar en breu a la bústia. Si no rebeu l'enllaç en breu, comproveu també el filtre de correu brossa."
 email_login_requested = "S’ha sol·licitat l’inici de sessió amb l’adreça de correu electrònic a %%title%%."
@@ -611,7 +611,7 @@ hold_record_already_on_loan = "Ja teniu el registre a préstec"
 hold_request_group = "Demanar a"
 hold_requested_group = "Demanat desde"
 hold_required_by = "No sol·licitat més enllà de"
-hold_required_by_date_before_start_date = 'Si us plau afegeix  un data "Necessari el" posterior a la data d'inici'
+hold_required_by_date_before_start_date = 'Si us plau afegeix  un data "Necessari el" posterior a la data d\'inici'
 hold_required_by_date_invalid = "Si us plau afegeix una data  'Necessari el' "
 hold_required_by_optional = "No necessari després de (optional)"
 hold_start_date = "Data inici"
@@ -1094,7 +1094,7 @@ Refine Results = "Refinar resultats"
 Region = "Àmbit geogràfic"
 relais_available = "Aquest registre està disponible amb prèstec interbibliotecari. Voldira demanar-ho?"
 relais_checking = "Comprovant disponivilitat..."
-relais_error_html = 'Hi ha hagut un problema amb la seva sol·licitut. Clickeu <a href="%%url%%" target='new'>here</a> per demanar-lo via préstec interbibliotecari.'
+relais_error_html = 'Hi ha hagut un problema amb la seva sol·licitut. Clickeu <a href="%%url%%" target="new">here</a> per demanar-lo via préstec interbibliotecari.'
 relais_request = "Solicitud de préstec interbibliotecari"
 relais_requesting = "Demanant..."
 relais_search = "Cerca de préstec interbibliotecari"
@@ -1344,7 +1344,7 @@ total_saved_items = "Registres total guardats"
 total_tags = "Etiquetes totals"
 total_users = "Usuaris totals"
 Transliterated Title = "Títol transliterat"
-tree_search_limit_reached_html = 'La seva cerca ha retornat massa registres per veure'ls a l'arbre de col·leccions. Veure els primers <b>%%limit%%</b> exemplars. Per una cerca completa cliqueu <a id="fullSearchLink" href="%%url%%" target="_blank">aquí.</a>'
+tree_search_limit_reached_html = 'La seva cerca ha retornat massa registres per veure\'ls a l\'arbre de col·leccions. Veure els primers <b>%%limit%%</b> exemplars. Per una cerca completa cliqueu <a id="fullSearchLink" href="%%url%%" target="_blank">aquí.</a>'
 trending_items_channel_title = "més populars"
 unique_tags = "Etiquetes úniques"
 University Library = "Biblioteca universitària"
