--- a/languages/el.ini
+++ b/languages/el.ini
@@ -1098,7 +1098,7 @@ Refine Results = "Περιορισμός αποτελεσμάτων"
 Region = "Χώρα / Περιοχή"
 relais_available = "Το τεκμήριο αυτό είναι διαθέσιμο μέσω διαδανεισμού. Θέλετε να το ζητήσετε;"
 relais_checking = "Έλεγχος διαθεσιμότητας..."
-relais_error_html = 'Παρουσιάστηκε πρόβλημα με αυτό το αίτημα. Πατήστε <a href="%%url%%" target='new'>εδώ</a> για να κάνετε το αίτημα μέσω της ιστοσελίδας διαδανεισμού'
+relais_error_html = 'Παρουσιάστηκε πρόβλημα με αυτό το αίτημα. Πατήστε <a href="%%url%%" target="new">εδώ</a> για να κάνετε το αίτημα μέσω της ιστοσελίδας διαδανεισμού'
 relais_request = "Αίτημα διαδανεισμού"
 relais_requesting = "Αίτημα σε εξέλιξη..."
 relais_search = "Αναζήτηση για διαδανεισμό"
