--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -85,7 +85,7 @@ authentication_error_admin = "Vous ne pouvez pas vous connecter en ce moment. Ve
 authentication_error_blank = "Ces champs ne peuvent être vides."
 authentication_error_creation_blocked = "Vous n'avez pas les droits nécessaires pour créer un compte."
 authentication_error_denied = "Les informations de connexion ne sont pas valides ! Accès refusé."
-authentication_error_email_not_verified_html = 'Votre adresse de courriel n'a pas encore été vérifiée. Veuillez chercher dans votre dossier de spams si le message de vérification a été filtré. Si besoin, nous pouvons <a href="%%url%%">renvoyer le courriel de vérification</a>.'
+authentication_error_email_not_verified_html = 'Votre adresse de courriel n\'a pas encore été vérifiée. Veuillez chercher dans votre dossier de spams si le message de vérification a été filtré. Si besoin, nous pouvons <a href="%%url%%">renvoyer le courriel de vérification</a>.'
 authentication_error_expired = "La demande de connexion a expiré."
 authentication_error_in_progress = "Une demande de connexion est déjà en cours de traitement. Veuillez recommencer plus tard, s'il vous faut relancer le processus."
 authentication_error_invalid = "Erreur de connexion -- veuillez réessayer."
@@ -373,7 +373,7 @@ Email address is invalid = "Cette adresse de courriel n'est pas valide"
 Email Record = "Envoyer la notice par courriel"
 Email this = "Envoyer par courriel"
 Email this Search = "Envoyer cette recherche par courriel"
-email_change_pending_html = 'Une demande de modification d'adresse de courriel est en cours pour %%pending%%. Merci de cliquer sur le lien contenu dans le message de vérification qui a été envoyé à cette adresse, afin de valider la modification. Si besoin, nous pouvons <a href="%%url%%">Renvoyer le message de vérification</a>.'
+email_change_pending_html = 'Une demande de modification d\'adresse de courriel est en cours pour %%pending%%. Merci de cliquer sur le lien contenu dans le message de vérification qui a été envoyé à cette adresse, afin de valider la modification. Si besoin, nous pouvons <a href="%%url%%">Renvoyer le message de vérification</a>.'
 email_failure = "Erreur - Le message n'a pu être envoyé"
 email_link = "Lien"
 email_login_desc = "Merci d'utiliser le lien suivant pour vous connecter. Si vous n'êtes pas à l'origine d'une demande de connexion, veuillez ignorer ce message. Attention, le lien n'est valide que pour une durée limitée, et uniquement avec l'appareil que vous avez utilisé pour saisir l'adresse de courriel."
@@ -831,7 +831,7 @@ no_email_address = "Il manque une adresse de courriel."
 no_items_selected = "Aucun élément n'est sélectionné"
 no_proxied_user = "Pas de demande pour autrui (la demande est pour vous-même)"
 nohit_active_filters = "Au moins un filtre a été appliqué à cette recherche. Enlevez ce filtre pour obtenir plus de résultats."
-nohit_change_tab = 'Vous avez recherché dans l'onglet "%%activeTab%%". Vous trouverez peut-être des résultats supplémentaires dans les autres onglets :'
+nohit_change_tab = 'Vous avez recherché dans l\'onglet "%%activeTab%%". Vous trouverez peut-être des résultats supplémentaires dans les autres onglets :'
 nohit_filters = "Filtres appliqués à cette recherche"
 nohit_heading = "Aucun résultat."
 nohit_lookfor_html = "Votre recherche - <strong>%%lookfor%%</strong> - ne correspond à aucune ressource."
@@ -932,7 +932,7 @@ od_info_unavail = "Cette information n'est pas disponible pour le moment."
 od_is_checkedout = "Vous avez emprunté ce titre. Il doit être retourné pour le %%due_date%%."
 od_is_on_hold = "Vous avez fait une demande pour ce titre."
 od_loans = "Emprunts Overdrive"
-od_mycontent_help = 'Pour trouver des informations et une aide pour le téléchargement de ces titres, veuillez consulter <a href="%%url%%">l'aide Overdrive</a>.'
+od_mycontent_help = 'Pour trouver des informations et une aide pour le téléchargement de ces titres, veuillez consulter <a href="%%url%%">l\'aide Overdrive</a>.'
 od_none_found = "Aucun titre n'a été trouvé."
 od_return_failure = "Ce titre ne peut pas être retourné."
 od_return_success = "Ce titre a été retourné."
@@ -1097,7 +1097,7 @@ Refine Results = "Affiner les résultats"
 Region = "Région"
 relais_available = "Ce document est disponible par le Prêt entre bibliothèques. Voulez-vous faire une demande ?"
 relais_checking = "Vérification de la disponibilité..."
-relais_error_html = 'Un problème est arrivé pendant votre demande. Cliquez <a href="%%url%%" target='new'>ici</a> pour demander ce document en utilisant le site Web du Prêt entre bibliothèques.'
+relais_error_html = 'Un problème est arrivé pendant votre demande. Cliquez <a href="%%url%%" target="new">ici</a> pour demander ce document en utilisant le site Web du Prêt entre bibliothèques.'
 relais_request = "Demande de prêt entre bibliothèques"
 relais_requesting = "Demande en cours..."
 relais_search = "Recherche pour le Prêt entre bibliothèques"
@@ -1349,7 +1349,7 @@ total_saved_items = "Nombre total d'éléments sauvegardés"
 total_tags = "Nombre total de tags"
 total_users = "Nombre total d'utilisateurs"
 Transliterated Title = "Titre translittéré"
-tree_search_limit_reached_html = 'Trop de réponses pour l'affichage arborescent. Seuls les <b>%%limit%%</b> premiers éléments sont affichés. Pour une recherche complète, cliquez <a id="fullSearchLink" href="%%url%%" target="_blank">ici.</a>'
+tree_search_limit_reached_html = 'Trop de réponses pour l\'affichage arborescent. Seuls les <b>%%limit%%</b> premiers éléments sont affichés. Pour une recherche complète, cliquez <a id="fullSearchLink" href="%%url%%" target="_blank">ici.</a>'
 trending_items_channel_title = "Documents populaires"
 unique_tags = "Tags uniques"
 University Library = "Bibliothèque universitaire"
