--- a/languages/it.ini
+++ b/languages/it.ini
@@ -608,7 +608,7 @@ hold_record_already_on_loan = "Hai gia il record in prestito"
 hold_request_group = "Richiesta di"
 hold_requested_group = "Richiesto da"
 hold_required_by = "Non richiedere più dopo"
-hold_required_by_date_before_start_date = 'Inserire "richeisto da" con una successiva a quella d'inizio'
+hold_required_by_date_before_start_date = 'Inserire "richeisto da" con una successiva a quella d\'inizio'
 hold_required_by_date_invalid = "Inserire una data valida 'richiesto da'"
 hold_required_by_optional = "non più richiesto dopo (opzionale)"
 hold_start_date = "Data d'inizio"
@@ -1097,7 +1097,7 @@ Refine Results = "Raffina i risultati"
 Region = "Regione"
 relais_available = "Questa copia è disponibile attraverso il servizio ILL. Vuoi richiederla?"
 relais_checking = "Sto controllando la disponibilità ..."
-relais_error_html = 'C'è un problam con questa richiesta. Clicca <a href="%%url%%" target='new'>qui</a> per richiedere questa copia usando il sito dell'ILL.'
+relais_error_html = 'C\'è un problam con questa richiesta. Clicca <a href="%%url%%" target="new">qui</a> per richiedere questa copia usando il sito dell\'ILL.'
 relais_request = "Richiesta di prestito ILL"
 relais_requesting = "In richiesta ..."
 relais_search = "Cerca attraverso l'ILL"
@@ -1349,7 +1349,7 @@ total_saved_items = "Totale oggetti salvati"
 total_tags = "Totale tag"
 total_users = "Totale utenti"
 Transliterated Title = "Titolo translitterato"
-tree_search_limit_reached_html = 'La tua ricerca restituisce troppi risultati per permetterti di visualizzarne l'albero. Questi sono i primi <b>%%limit%%</b> risultati. Per una ricerca completa <a id="fullSearchLink" href="%%url%%" target="_blank">clicca qui.</a>'
+tree_search_limit_reached_html = 'La tua ricerca restituisce troppi risultati per permetterti di visualizzarne l\'albero. Questi sono i primi <b>%%limit%%</b> risultati. Per una ricerca completa <a id="fullSearchLink" href="%%url%%" target="_blank">clicca qui.</a>'
 trending_items_channel_title = "Copie ad alto utilizzo rientrate di recente"
 unique_tags = "Tag unici"
 University Library = "Biblioteca Universitaria"
