--- a/languages/nl.ini
+++ b/languages/nl.ini
@@ -1014,7 +1014,7 @@ Refine Results = "Verfijn jouw resultaten"
 Region = "Gebied"
 relais_available = "Dit item is beschikbaar via IBL (Interbibliothecair leenverkeer). Wil je het aanvragen?"
 relais_checking = "Beschikbaarheid wordt gecontroleerd..."
-relais_error_html = 'Er was een probleem i.v.m. deze aanvraag. Klik <a href="%%url%%" target='new'>hier</a> om het item aan te vragen via Interbibliothecair Leenverkeer.'
+relais_error_html = 'Er was een probleem i.v.m. deze aanvraag. Klik <a href="%%url%%" target="new">hier</a> om het item aan te vragen via Interbibliothecair Leenverkeer.'
 relais_request = "Interbibliothecaire Leenaanvraag"
 relais_requesting = "Je aanvraag loopt..."
 relais_search = "Zoek Interbibliothecaire uitleen"
