--- a/languages/pl.ini
+++ b/languages/pl.ini
@@ -1075,7 +1075,7 @@ Refine Results = "Redukuj rezultaty"
 Region = "Region"
 relais_available = "Ta książka jest dostępna przez wypożyczenie międzybiblioteczne. Chcesz zamówić?"
 relais_checking = "Sprawdzamy dostępność..."
-relais_error_html = 'Wystąpił problem przy zamówieniu. Kliknij <a href="%%url%%" target='new'>here</a> aby zamówić tą książke za pomocą wypożyczalni międzybibliotecznej.'
+relais_error_html = 'Wystąpił problem przy zamówieniu. Kliknij <a href="%%url%%" target="new">here</a> aby zamówić tą książke za pomocą wypożyczalni międzybibliotecznej.'
 relais_request = "Zamówienie wypożyczenia międzybibliotecznego"
 relais_requesting = "Zamawiamy..."
 relais_search = "Wyszukaj wypożyczenie międzybiblioteczne"
