--- a/languages/sv.ini
+++ b/languages/sv.ini
@@ -1103,7 +1103,7 @@ Refine Results = "Förfina resultatet"
 Region = "Region"
 relais_available = "Materialet är tillgängligt som en fjärrlån. Vill du skapa en fjärrlånbeställning?"
 relais_checking = "Kollar tillgänglighet..."
-relais_error_html = 'Beställning misslyckades. Skapa en beställning på <a href="%%url%%" target='new'>fjärrlånesystemets sidor</a>.'
+relais_error_html = 'Beställning misslyckades. Skapa en beställning på <a href="%%url%%" target="new">fjärrlånesystemets sidor</a>.'
 relais_request = "Fjärrlånbeställning"
 relais_requesting = "Skickar beställningen..."
 relais_search = "Fjärrlånsökning"
