--- a/languages/tr.ini
+++ b/languages/tr.ini
@@ -1151,7 +1151,7 @@ Refine Results = "Sonuçları Daraltın"
 Region = "Bölge"
 relais_available = "Bu kayda Kütüphanelerarası Ödünç Verme yoluyla ulaşılabilir. Talep etmek ister misiniz?"
 relais_checking = "Kullanılabilirliği kontrol ediliyor..."
-relais_error_html = 'Bu istekle ilgili bir sorun oluştu. <a href="%%url%%" target='new'>Buraya tıklayın</a> Kütüphaneler arası ödünç verme web sitesini kullanarak bu öğeyi istemek için.'
+relais_error_html = 'Bu istekle ilgili bir sorun oluştu. <a href="%%url%%" target="new">Buraya tıklayın</a> Kütüphaneler arası ödünç verme web sitesini kullanarak bu öğeyi istemek için.'
 relais_request = "Kütüphaneler Arası Ödünç Verme İsteği"
 relais_requesting = "İsteniyor..."
 relais_search = "Kütüphanelerarası Ödünç Vermeyi Ara"
@@ -1403,7 +1403,7 @@ total_saved_items = "Toplam Kayıtlı Öğeler"
 total_tags = "Toplam Etiketler"
 total_users = "Toplam Kullanıcılar"
 Transliterated Title = "Çeviri Başlığı"
-tree_search_limit_reached_html = 'Aramanız çok fazla sonuç verdi. Bu yapıda gösterilemiyor. Sadece ilk <b>%%limit%%</b> kayıt gösteriliyor. Tüm arama için <a id="fullSearchLink" href="%%url%%" target="_blank">'e tıklayın.</a>'
+tree_search_limit_reached_html = 'Aramanız çok fazla sonuç verdi. Bu yapıda gösterilemiyor. Sadece ilk <b>%%limit%%</b> kayıt gösteriliyor. Tüm arama için <a id="fullSearchLink" href="%%url%%" target="_blank">\'e tıklayın.</a>'
 trending_items_channel_title = "Trend Olan Kayıtlar"
 unique_tags = "Benzersiz Etiketler"
 University Library = "Üniversite Kütüphanesi"
