--- a/languages/uk.ini
+++ b/languages/uk.ini
@@ -1097,7 +1097,7 @@ Refine Results = "Уточнити результати"
 Region = "Регіон"
 relais_available = "Цей примірник доступний через видачу МБА. Ви бажаєте його замовити?"
 relais_checking = "Перевірка доступності..."
-relais_error_html = 'З Вашим замовленням виникла проблема. Замовте цей примірник через <a href="%%url%%" target='new'>Видача по МБА</a>.'
+relais_error_html = 'З Вашим замовленням виникла проблема. Замовте цей примірник через <a href="%%url%%" target="new">Видача по МБА</a>.'
 relais_request = "Замовлення МБА"
 relais_requesting = "Замовляється..."
 relais_search = "Пошук у Видачах по МБА"
