--- a/languages/CookieConsent/fr.ini
+++ b/languages/CookieConsent/fr.ini
@@ -2,7 +2,7 @@ Accept All Cookies = "Accepter tous les cookies"
 Accept Only Essential Cookies = "Accepter uniquement les cookies nécessaires"
 analytics_cookies_description_html = "Les données analytiques collectées par ces cookies sont utilisées pour le développement du site."
 analytics_cookies_title_html = "Cookies analytiques"
-category_description_html = 'Les catégories de cookies utilisés sur le site reposent sur leur objectif. La description de chaque catégorie figure ci-dessous, ainsi que le choix de l'accepter ou de la rejeter. <a href="%%siteRootAttr%%/Content/privacy" target="_blank">Informations relatives aux données personnelles sur ce site</a>.'
+category_description_html = 'Les catégories de cookies utilisés sur le site reposent sur leur objectif. La description de chaque catégorie figure ci-dessous, ainsi que le choix de l\'accepter ou de la rejeter. <a href="%%siteRootAttr%%/Content/privacy" target="_blank">Informations relatives aux données personnelles sur ce site</a>.'
 cookie_description_cart_html = "Utilisés pour stocker le contenu du panier."
 cookie_description_consent_html = "Utilisés pour stocker l'information sur l'acceptation ou le refus par les visiteurs de l'enregistrement des cookies, en fonction des catégories utilisées sur le site."
 cookie_description_language_html = "Utilisés pour stocker la langue de l'interface utilisée par l'usager."
