--- a/languages/es.ini
+++ b/languages/es.ini
@@ -1098,7 +1098,7 @@ Refine Results = "Limitar resultados"
 Region = "Ámbito geográfico"
 relais_available = "Este ítem está disponible a través de préstamo interbibliotecario. ¿Te gustaría solicitarlo?"
 relais_checking = "Comprobando disponibilidad..."
-relais_error_html = 'Hubo un problema con esta solicitud. Haga clic <a href="%%url%%" target='new'>aquí</a> para solicitar este ítem utilizando el sitio web de préstamo interbibliotecario.'
+relais_error_html = 'Hubo un problema con esta solicitud. Haga clic <a href="%%url%%" target="new">aquí</a> para solicitar este ítem utilizando el sitio web de préstamo interbibliotecario.'
 relais_request = "Solicitud de préstamo interbibliotecario"
 relais_requesting = "Solicitando ..."
 relais_search = "Buscar de préstamo interbibliotecario"
