--- a/languages/hr.ini
+++ b/languages/hr.ini
@@ -1098,7 +1098,7 @@ Refine Results = "Detaljiziraj rezultate"
 Region = "Regija"
 relais_available = "Ovo je djelo dostupno putem međuknjižnične posudbe. Želiš li ga zatražiti na taj način?"
 relais_checking = "Provjera dostupnosti …"
-relais_error_html = 'Došlo je do greške s ovim zahtjevom. Zatraži ovo djelo putem <a href="%%url%%" target='new'>web stranice za međuknjižničnu posudbu</a>.'
+relais_error_html = 'Došlo je do greške s ovim zahtjevom. Zatraži ovo djelo putem <a href="%%url%%" target="new">web stranice za međuknjižničnu posudbu</a>.'
 relais_request = "Zahtjev za međuknjižničnu posudbu"
 relais_requesting = "Zahtjev u tijeku …"
 relais_search = "Traži međuknjižničnu posudbu"
