--- a/languages/ja.ini
+++ b/languages/ja.ini
@@ -1098,7 +1098,7 @@ Refine Results = "結果の絞り込み"
 Region = "地理区分"
 relais_available = "このアイテムは図書館間貸出を通じて利用可能です。リクエストしますか?"
 relais_checking = "利用可能か調査中..."
-relais_error_html = 'このリクエストで問題が発生しました。<a href="%%url%%" target='new'>ここ</a>をクリックして、図書館間貸出サイトでこのアイテムをリクエストしてください。'
+relais_error_html = 'このリクエストで問題が発生しました。<a href="%%url%%" target="new">ここ</a>をクリックして、図書館間貸出サイトでこのアイテムをリクエストしてください。'
 relais_request = "図書館間貸出リクエスト"
 relais_requesting = "リクエスト処理中..."
 relais_search = "図書館間貸出を検索"
