--- a/languages/vi.ini
+++ b/languages/vi.ini
@@ -1011,7 +1011,7 @@ Refine Results = "Tinh chỉnh kết quả"
 Region = "Miền"
 relais_available = "Mục này có sẵn thông qua cho mượn Liên thư viện. Bạn có muốn yêu cầu không?"
 relais_checking = "Đang kiểm tra tính khả dụng ..."
-relais_error_html = 'Đã xảy ra sự cố với yêu cầu này. Nhấp chuột <a href="%%url%%" target='new'>here</a> để yêu cầu mục này sử dụng trang web mượn Liên thư viện.'
+relais_error_html = 'Đã xảy ra sự cố với yêu cầu này. Nhấp chuột <a href="%%url%%" target="new">here</a> để yêu cầu mục này sử dụng trang web mượn Liên thư viện.'
 relais_request = "Yêu cầu mượn liên thư viện"
 relais_requesting = "Đang yêu cầu ..."
 relais_search = "Tìm kiếm thư viện liên thư viện"
